--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "my-node-server",
   "version": "1.0.0",
-  "description": "A Node.js server",
-  "main": "node.js",
+  "description": "A Node.js server with an index.html page and a not found page",
+  "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack"
   },
   "dependencies": {
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "html-webpack-plugin": "^4.5.0",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.1.0"
+    "html-loader": "^2.1.2",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
